--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "build-command", 
+        "src": "vite.config.js",
         "use": "@vercel/static-build"
       }
     ]
   }
-  
