--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "vite.config.js",
+        "src": "build", 
         "use": "@vercel/static-build"
       }
     ]
