--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "vite.config.js",
-        "use": "@vercel/static-build"
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
-  }
+}
