--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.js",
-        "use": "@vercel/node"
+        "src": "build-command", 
+        "use": "@vercel/static-build"
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-}
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+      ]
+  }
