--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "build-command", 
+        "src": "vite build", 
         "use": "@vercel/static-build"
       }
     ],
